--- a/Source/ModUtils/ModUtils.csproj
+++ b/Source/ModUtils/ModUtils.csproj
@@ -36,9 +36,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\..\..\..\..\..\..\SteamLibrary\steamapps\common\Offworld Trading Company\Offworld_Data\Managed\Assembly-CSharp.dll</HintPath>
-    </Reference>
     <Reference Include="Assembly-CSharp-firstpass">
       <HintPath>..\..\..\..\..\..\..\..\..\SteamLibrary\steamapps\common\Offworld Trading Company\Offworld_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
@@ -50,6 +47,9 @@
     </Reference>
     <Reference Include="System.Xml">
       <HintPath>..\..\..\..\..\..\..\..\SteamLibrary\steamapps\common\Offworld Trading Company\Offworld_Data\Managed\System.Xml.dll</HintPath>
+    </Reference>
+    <Reference Include="Assembly-CSharp">
+      <HintPath>..\..\..\..\..\..\..\..\SteamLibrary\steamapps\common\Offworld Trading Company\Offworld_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
